Bug 11858 - anonymous smb connections don't work anymore
Summary: anonymous smb connections don't work anymore
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: 4.4.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
: 11832 11903 (view as bug list)
Depends on: 11849
Blocks:
  Show dependency treegraph
 
Reported: 2016-04-19 16:15 UTC by Stefan Metzmacher
Modified: 2016-08-02 09:59 UTC (History)
7 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2016-04-19 16:15:09 UTC
The patches from https://bugzilla.samba.org/show_bug.cgi?id=11804
let smb client connections use an NTLMv2_Response of "" as password
instead of an empty blob for anonymous connections.

This has a number of implications:

1. auth_domain doesn't work anymore (a domain member without a running winbindd)
2. smbclient -U% //desktop-5blpm4c/Video doesn't work anymore.
Comment 1 Stefan Metzmacher 2016-04-28 03:30:37 UTC
Please test the patches from bug #11849, thanks!
Comment 2 Stefan Metzmacher 2016-05-03 11:26:54 UTC
*** Bug 11832 has been marked as a duplicate of this bug. ***
Comment 3 David Woodhouse 2016-05-06 09:30:11 UTC
*** Bug 11903 has been marked as a duplicate of this bug. ***
Comment 4 Stefan Metzmacher 2016-08-01 07:40:16 UTC
Fixed with 4.4.3, 4.3.9, 4.2.12.